# wgpu-mandelbrot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  lib.rs  main.rs  plotter.rs  shader.wgsl  state.rs  ui.rs
